Add several html's files and several scss file's

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,5 +8,10 @@
   "rules": {
     "semi": "off",
     "quotes": "off",
+    "linebreak-style": "off",
+    "camelcase": "off",
+    "indent": ["error", 4],
+    "comma-dangle": "off",
+    "require-jsdoc": "off"
   }
 }
