--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^7.17.0",
     "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2",
+    "eslint-webpack-plugin": "^2.4.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
     "sass": "^1.32.0",
@@ -39,5 +40,8 @@
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0",
     "webpack-dev-server": "^3.11.1"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
