--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,8 @@
     "camelcase": "off",
     "indent": ["error", 4],
     "comma-dangle": "off",
-    "require-jsdoc": "off"
+    "require-jsdoc": "off",
+    "max-len": "off",
+    "arrow-parens": "off"
   }
 }
