--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "comma-dangle": "off",
     "require-jsdoc": "off",
     "max-len": "off",
-    "arrow-parens": "off"
+    "arrow-parens": "off",
+    "no-debugger": "off"
   }
 }
